# CPP-Modules

./: .gitignore  Sample.class.cpp  Sample.class.hpp  main.cpp  new_Makefile.sh
ex00/: .gitignore  Makefile
ex01/: .gitignore  CMakeLists.txt  Makefile
ex01/src/: CMakeLists.txt  ClassContact.cpp  ClassContact.hpp  ClassPhonebook.cpp  ClassPhonebook.hpp  P-42  P-42.cpp  sourcelist.cmake
ex02/: .gitignore  CMakeLists.txt  Makefile
ex02/src/: CMakeLists.txt
module00/ex00/: Makefile
module00/ex01/: Makefile  new_Makefile.sh
module00/ex02/: .project_name  Makefile  ff  new_Makefile.sh
module01/ex00/: Makefile
module01/ex01/: Makefile
module01/ex02/: .gitignore  .project_name  Makefile
module01/ex03/: Makefile
module01/ex04/: .project_name  Makefile  test.sh
module01/ex05/: .project_name  Makefile
module01/ex06/: .project_name  Makefile
module02/ex00/: Makefile
module02/ex01/: .project_name  Makefile
module02/ex02/: .project_name  Makefile
module02/ex03/: .project_name  Makefile
module03/ex00/: Makefile
module03/ex01/: .project_name  Makefile
module03/ex02/: .project_name  Makefile
module03/ex03/: .project_name  Makefile
module04/ex00/: Makefile
module04/ex01/: .project_name  Makefile
module04/ex02/: Makefile
module04/ex03/: Makefile
module05/ex00/: .project_name  Makefile
module05/ex01/: Makefile
module05/ex02/: .project_name  Makefile
module05/ex03/: Makefile
module06/ex00/: Makefile
module06/ex01/: Makefile
module06/ex02/: Makefile
module07/ex00/: Makefile
module07/ex01/: Makefile
module07/ex02/: Makefile
(+193 files in other folders)
